General cleanup & Refactors